--- a/resources/presets/events/resources/views/components/_events_item.antlers.html
+++ b/resources/presets/events/resources/views/components/_events_item.antlers.html
@@ -7,7 +7,7 @@
 <!-- /components/_{{ handle }}_item.antlers.html -->
 <article class="flex flex-col {{ class }}">
     <figure class="mb-4">
-        {{ partial:statamic-peak-tools::components/picture :image="image" sizes="(min-width: 1280px) 430px, (min-width: 768px) 30vw, 90vw" aspect_ratio="3/2" lazy="true" cover="true" class="aspect-[3/2]" }}
+        {{ picture :image="image" sizes="(min-width: 1280px) 430px, (min-width: 768px) 30vw, 90vw" aspect_ratio="3/2" cover="true" class="aspect-[3/2]" }}
     </figure>
 
     <div class="flex flex-col gap-y-2">
