--- a/resources/presets/events/resources/views/events/show.antlers.html
+++ b/resources/presets/events/resources/views/events/show.antlers.html
@@ -41,13 +41,13 @@
     }
 </script>
 
-<main class="py-12 md:py-16 lg:py-24 stack-12 md:stack-16 lg:stack-24" id="content">
+<main class="page-builder" id="content">
     <section class="fluid-grid stack-8">
         <header class="span-content md:col-start-[col-3] md:col-span-8 stack-4">
             {{ partial:typography/h1 :content="title" class="mt-4 text-center" }}
 
             <figure>
-                {{ partial:statamic-peak-tools::components/picture :image="image" sizes="(min-width: 1280px) 1150px, (min-width: 768px) 90vw" aspect_ratio="3/1" lazy="true" cover="true" class="aspect-[3/1]" }}
+                {{ picture :image="image" sizes="(min-width: 1280px) 1150px, (min-width: 768px) 90vw" aspect_ratio="3/1" cover="true" class="aspect-[3/1]" }}
             </figure>
         </header>
 
